--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,8 @@
     "./button": "./src/components/ui/button.tsx",
     "./card": "./src/components/card.tsx",
     "./code": "./src/components/code.tsx",
-    "./dropdown-menu": "./src/components/ui/dropdown-menu.tsx"
+    "./dropdown-menu": "./src/components/ui/dropdown-menu.tsx",
+    "./form": "./src/components/ui/form.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -33,15 +34,19 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.367.0",
+    "react-hook-form": "^7.51.3",
     "react-phone-number-input": "^3.3.12",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.4"
   }
 }
