--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@wise/store": "*",
+    "@hookform/resolvers": "^3.3.4",
     "@repo/ui": "*",
     "@wise/db": "*",
+    "@wise/store": "*",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.1.1",
@@ -19,6 +20,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
