--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./phone-input": "./src/components/phone-input.tsx",
     "./text-input": "./src/components/text-input.tsx",
     "./select": "./src/components/select.tsx",
     "./center": "./src/components/center.tsx",
@@ -12,7 +11,9 @@
     "./card": "./src/components/card.tsx",
     "./code": "./src/components/code.tsx",
     "./dropdown-menu": "./src/components/ui/dropdown-menu.tsx",
-    "./form": "./src/components/ui/form.tsx"
+    "./form": "./src/components/ui/form.tsx",
+    "./input": "./src/components/ui/input.tsx",
+    "./label": "./src/components/ui/label.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-collection": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -45,7 +47,6 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.367.0",
     "react-hook-form": "^7.51.3",
-    "react-phone-number-input": "^3.3.12",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
   }
